Run as separate job

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -28,11 +28,15 @@ jobs:
         with:
           push: true
           tags: klaalo/shibboleth-idp:latest
-      - 
-        name: Docker Hub Description
-        uses: peter-evans/dockerhub-description@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          short-description: ${{ github.event.repository.description }}
-          repository: klaalo/shibboleth-idp
+  dockerUpdateDescription:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3    
+    - 
+      name: Docker Hub Description
+      uses: peter-evans/dockerhub-description@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        short-description: ${{ github.event.repository.description }}
+        repository: klaalo/shibboleth-idp
