--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -27,6 +27,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: klaalo/shibboleth-idp:latest
   dockerUpdateDescription:
     runs-on: ubuntu-latest
