--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: klaalo/shibboleth-idp:latest
+          tags: klaalo/shibboleth-idp:4.3.1.1
   dockerUpdateDescription:
     runs-on: ubuntu-latest
     steps:
